@@ -470,6 +470,8 @@ class ReflectionProperty implements Reflector
     public const int IS_PROTECTED_SET = UNKNOWN;
     /** @cvalue ZEND_ACC_PRIVATE_SET */
     public const int IS_PRIVATE_SET = UNKNOWN;
+    /** @cvalue ZEND_ACC_FINAL */
+    public const int IS_FINAL = UNKNOWN;
 
     public string $name;
     public string $class;
@@ -565,6 +567,8 @@ class ReflectionProperty implements Reflector
     public function hasHook(PropertyHookType $type): bool {}
 
     public function getHook(PropertyHookType $type): ?ReflectionMethod {}
+
+    public function isFinal(): bool {}
 }
 
 /** @not-serializable */
